[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "domain-enrich"
version = "0.1.0"
description = "Offline, resumable CLI microservice that enriches domain lists by joining against open offline datasets."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
dependencies = [
    "click>=8.1",
    "ijson>=3.2",
    "geoip2>=4.7",
    "pandas>=2.0",
    "pyarrow>=14.0",
    "idna>=3.4",
    "tqdm>=4.66",
]

[project.optional-dependencies]
dev = ["pytest>=7.0"]

[project.scripts]
domain-enrich = "domain_enrich.cli:cli"

[tool.setuptools.packages.find]
include = ["domain_enrich*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
