[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "domain-enrich"
version = "0.1.0"
description = "Offline, resumable CLI microservice that enriches domain lists by joining against open offline datasets."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
dependencies = [
    "click>=8.1",
    "ijson>=3.2",
    "geoip2>=4.7",
    "pandas>=2.0",
    "pyarrow>=14.0",
    "idna>=3.4",
    "tqdm>=4.66",
    "dnspython>=2.4",
]

[project.optional-dependencies]
# Online (live) mode: live HTTP sources + headless-browser page rendering.
# After install, fetch the browser once:  python -m playwright install chromium
online = ["httpx>=0.27", "playwright>=1.44"]
dev = ["pytest>=7.0", "pytest-asyncio>=0.23", "httpx>=0.27"]

[project.scripts]
domain-enrich = "domain_enrich.cli:cli"

[tool.setuptools.packages.find]
include = ["domain_enrich*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
